--- a/plant.html
+++ b/plant.html
@@ -55,8 +55,8 @@
 <body>
   <header>
     <div class="logo">
-      <h1>Space Garden</h1>
-      <p class="lead">Plants • Weather • NASA Data — Space-inspired dashboard</p>
+      <h1>Garden</h1>
+      <p class="lead">Plants • Weather   dashboard</p>
     </div>
   </header>
 
