--- a/home.html
+++ b/home.html
@@ -393,6 +393,7 @@
             <a href="plant.html" class="box">Where to grow</a>
             <a href="Rain_Alerts.html" class="box">Where to go</a>
             <a href="space.html" class="box">Beyond the Sky</a>
+            <a href="rain.html" class="box" > Rain statistics</a>
         </div>
     </div>
     
