--- a/rain.html
+++ b/rain.html
@@ -386,7 +386,7 @@
       </div>
     </div>
       <div class="back">
-        <a href="homepage.html" class="back-button">← Back</a>
+        <a href="home.html" class="back-button">← Back</a>
       </div>
   </div>
 
