--- a/space.html
+++ b/space.html
@@ -64,6 +64,34 @@
     .meta{font-size:13px;color:var(--muted)}
     canvas.chart{width:100%;height:320px}
     footer{text-align:center;padding:40px 20px;color:var(--muted);font-size:13px}
+                    .back {
+        position: fixed;
+        bottom: 20px;
+        left: 20px;
+        z-index: 1000;
+      }
+
+      .back-button {
+        display: inline-block;
+        padding: 12px 24px;
+        background: rgba(255, 255, 255, 0.15);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        border-radius: 25px;
+        color: white;
+        text-decoration: none;
+        font-size: 16px;
+        font-weight: 500;
+        transition: all 0.3s ease;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+      }
+
+      .back-button:hover {
+        background: rgba(255, 255, 255, 0.25);
+        transform: translateY(-2px);
+        box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+      }
   </style>
 </head>
 <body>
@@ -114,7 +142,11 @@
           <canvas class="chart" id="ch-radar"></canvas>
         </div>
       </div>
+              <div class="back">
+        <a href="home.html" class="back-button">← Back</a>
+      </div>
     </div>
+
   </section>
 
   <footer>Demo concept — can be linked to live NASA/NOAA APIs.</footer>
